Move panel background back to where it belongs. (#8313) This is done to avoid using min-height: 100% which triggers overflow issues in browsers that do not take the scrollbar into account. The background seems to have been on the child of the .v-panel-content to make some things work in IE6.

--- a/WebContent/VAADIN/themes/reindeer/panel/panel.css
+++ b/WebContent/VAADIN/themes/reindeer/panel/panel.css
@@ -23,6 +23,7 @@
 }
 .v-panel-content,
 .white .v-panel-content {
+	background: #fff;
 	border: 1px solid #dcdcdc;
 	border-bottom: none;
 	border-top: none;
@@ -31,11 +32,6 @@
 .v-gecko .v-panel-content,
 .v-ie9 .v-panel-content {
 	border-top-color: rgba(0,0,0,.07);
-}
-.v-panel-content > div {
-	background: #fff;
-	min-height: 100%;
-	overflow: visible; /* min-height causes problems with borders and paddings if overflow is e.g. hidden */
 }
 .blue .v-panel-deco {
 	border-color: #92a3ac;
@@ -70,8 +66,6 @@
 }
 .v-panel-light .v-panel-content-light {
 	border: none;
-}
-.v-panel-content-light > div {
 	background: transparent;
 }
 .v-panel-light .v-panel-deco-light {
